--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
                     <th>Gęstość [os/km^2]</th>
                 </tr>
                 <tr>
-                    <th><button id="Rosnąco">Rosnąco</button></th>
-                    <th><button id="Rosnąco">Rosnąco</button></th>
-                    <th><button id="Rosnąco">Rosnąco</button></th>
-                    <th><button id="Rosnąco">Rosnąco</button></th>
-                    <th><button id="Rosnąco">Rosnąco</button></th>
+                    <th><button onclick='generujTab(rosnPo("kraj"))'>Rosnąco</button></th>
+                    <th><button onclick='generujTab(rosnPo("kontynent"))'>Rosnąco</button></th>
+                    <th><button onclick='generujTab(rosnPo("powierzchnia"))'>Rosnąco</button></th>
+                    <th><button onclick='generujTab(rosnPo("populacja"))'>Rosnąco</button></th>
+                    <th><button onclick='generujTab(państwo.rosnGęst)'>Rosnąco</button></th>
                 </tr>
                 <tr>
-                    <th><button id="Malejąco">Malejąco</button></th>
-                    <th><button id="Malejąco">Malejąco</button></th>
-                    <th><button id="Malejąco">Malejąco</button></th>
-                    <th><button id="Malejąco">Malejąco</button></th>
-                    <th><button id="Malejąco">Malejąco</button></th>
+                    <th><button onclick='generujTab(malPo("kraj"))'>Malejąco</button></th>
+                    <th><button onclick='generujTab(malPo("kontynent"))'>Malejąco</button></th>
+                    <th><button onclick='generujTab(malPo("powierzchnia"))'>Malejąco</button></th>
+                    <th><button onclick='generujTab(malPo("populacja"))'>Malejąco</button></th>
+                    <th><button onclick='generujTab(państwo.malGęst)'>Malejąco</button></th>
                 </tr>
             </thead>
             <tbody id="tabela">
