--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <th>Gęstość [os/km^2]</th>
                 </tr>
                 <tr>
-                    <th><button onclick='generujTab(compareWords("kraj"))'>Rosnąco</button></th>
-                    <th><button onclick='generujTab(compareWords("kontynent"))'>Rosnąco</button></th>
+                    <th><button onclick='generujTab(rosnPo("kraj"))'>Rosnąco</button></th>
+                    <th><button onclick='generujTab(rosnPo("kontynent"))'>Rosnąco</button></th>
                     <th><button onclick='generujTab(rosnPo("powierzchnia"))'>Rosnąco</button></th>
                     <th><button onclick='generujTab(rosnPo("populacja"))'>Rosnąco</button></th>
                     <th><button onclick='generujTab(państwo.rosnGęst)'>Rosnąco</button></th>
