--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <table>
+        <table align="center">
             <thead>
                 <tr>
                     <th>Kraj</th>
