--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <html>
-    <head>
-        <title>
-            Tabele JavaScript
-        </title>
-        <style>
-            .tabela {
-                margin: 0;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                -ms-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
-            }
-        </style>
-    </head>
+<head>
+    <title>
+        Tabele JavaScript
+    </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+    </style>
+</head>
     <body>
         <table class="tabela">
             <thead>
