naprawa tego co filip zepsuł

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                     <th><button onclick='generujTab(rosnPoAlf("kontynent"))'>Rosnąco</button></th>
                     <th><button onclick='generujTab(rosnPo("powierzchnia"))'>Rosnąco</button></th>
                     <th><button onclick='generujTab(rosnPo("populacja"))'>Rosnąco</button></th>
-                    <th><button onclick='generujTab(państwo.rosnGęst)'>Rosnąco</button></th>
+                    <th><button onclick='generujTab(Państwo.rosnGęst)'>Rosnąco</button></th>
                 </tr>
                 <tr>
                     <th><button onclick='generujTab(malPoAlf("kraj"))'>Malejąco</button></th>
                     <th><button onclick='generujTab(malPoAlf("kontynent"))'>Malejąco</button></th>
                     <th><button onclick='generujTab(malPo("powierzchnia"))'>Malejąco</button></th>
                     <th><button onclick='generujTab(malPo("populacja"))'>Malejąco</button></th>
-                    <th><button onclick='generujTab(państwo.malGęst)'>Malejąco</button></th>
+                    <th><button onclick='generujTab(Państwo.malGęst)'>Malejąco</button></th>
                 </tr>
             </thead>
             <tbody id="tabela">
