--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
 </head>
     <body>
-        <table class="tabela">
+        <table class="steelBlueCols">
             <thead>
                 <tr>
                     <th>Kraj</th>
@@ -18,18 +18,18 @@
                     <th>Gęstość [os/km^2]</th>
                 </tr>
                 <tr>
-                    <th><button onclick='generujTab(rosnPoAlf("kraj"))'>Rosnąco</button></th>
-                    <th><button onclick='generujTab(rosnPoAlf("kontynent"))'>Rosnąco</button></th>
-                    <th><button onclick='generujTab(rosnPo("powierzchnia"))'>Rosnąco</button></th>
-                    <th><button onclick='generujTab(rosnPo("populacja"))'>Rosnąco</button></th>
-                    <th><button onclick='generujTab(Państwo.rosnGęst)'>Rosnąco</button></th>
+                    <th><button class="button" onclick='generujTab(rosnPoAlf("kraj"))'>Rosnąco</button></th>
+                    <th><button class="button" onclick='generujTab(rosnPoAlf("kontynent"))'>Rosnąco</button></th>
+                    <th><button class="button" onclick='generujTab(rosnPo("powierzchnia"))'>Rosnąco</button></th>
+                    <th><button class="button" onclick='generujTab(rosnPo("populacja"))'>Rosnąco</button></th>
+                    <th><button class="button"  onclick='generujTab(Państwo.rosnGęst)'>Rosnąco</button></th>
                 </tr>
                 <tr>
-                    <th><button onclick='generujTab(malPoAlf("kraj"))'>Malejąco</button></th>
-                    <th><button onclick='generujTab(malPoAlf("kontynent"))'>Malejąco</button></th>
-                    <th><button onclick='generujTab(malPo("powierzchnia"))'>Malejąco</button></th>
-                    <th><button onclick='generujTab(malPo("populacja"))'>Malejąco</button></th>
-                    <th><button onclick='generujTab(Państwo.malGęst)'>Malejąco</button></th>
+                    <th><button class="button" onclick='generujTab(malPoAlf("kraj"))'>Malejąco</button></th>
+                    <th><button class="button" onclick='generujTab(malPoAlf("kontynent"))'>Malejąco</button></th>
+                    <th><button class="button" onclick='generujTab(malPo("powierzchnia"))'>Malejąco</button></th>
+                    <th><button class="button" onclick='generujTab(malPo("populacja"))'>Malejąco</button></th>
+                    <th><button class="button" onclick='generujTab(Państwo.malGęst)'>Malejąco</button></th>
                 </tr>
             </thead>
             <tbody id="tabela">
