--- a/index.html
+++ b/index.html
@@ -8,34 +8,38 @@
     <style>
     </style>
 </head>
-    <body>
-        <table class="steelBlueCols">
-            <thead>
-                <tr>
-                    <th>Kraj</th>
-                    <th>Kontynent</th>
-                    <th>Powierzchnia [km^2]</th>
-                    <th>Populacja</th>
-                    <th>Gęstość [os/km^2]</th>
-                </tr>
-                <tr>
-                    <th><button class="button" onclick='generujTab(rosnPoAlf("kraj"))'>Rosnąco</button></th>
-                    <th><button class="button" onclick='generujTab(rosnPoAlf("kontynent"))'>Rosnąco</button></th>
-                    <th><button class="button" onclick='generujTab(rosnPo("powierzchnia"))'>Rosnąco</button></th>
-                    <th><button class="button" onclick='generujTab(rosnPo("populacja"))'>Rosnąco</button></th>
-                    <th><button class="button" onclick='generujTab(Państwo.rosnGęst)'>Rosnąco</button></th>
-                </tr>
-                <tr>
-                    <th><button class="button" onclick='generujTab(malPoAlf("kraj"))'>Malejąco</button></th>
-                    <th><button class="button" onclick='generujTab(malPoAlf("kontynent"))'>Malejąco</button></th>
-                    <th><button class="button" onclick='generujTab(malPo("powierzchnia"))'>Malejąco</button></th>
-                    <th><button class="button" onclick='generujTab(malPo("populacja"))'>Malejąco</button></th>
-                    <th><button class="button" onclick='generujTab(Państwo.malGęst)'>Malejąco</button></th>
-                </tr>
-            </thead>
-            <tbody id="tabela">
-            </tbody>
-            </table>
-            <script src="tabela.js"></script>
-    </body>
+<body>
+    <table class="steelBlueCols">
+        <thead>
+            <tr>
+                <th>Kraj</th>
+                <th>Kontynent</th>
+                <th>Powierzchnia [km^2]</th>
+                <th>Populacja</th>
+                <th>Gęstość [os/km^2]</th>
+            </tr>
+            <tr>
+                <th><button class="button" onclick='generujTab(rosnPoAlf("kraj"))'>Rosnąco</button></th>
+                <th><button class="button" onclick='generujTab(rosnPoAlf("kontynent"))'>Rosnąco</button></th>
+                <th><button class="button" onclick='generujTab(rosnPo("powierzchnia"))'>Rosnąco</button></th>
+                <th><button class="button" onclick='generujTab(rosnPo("populacja"))'>Rosnąco</button></th>
+                <th><button class="button" onclick='generujTab(Państwo.rosnGęst)'>Rosnąco</button></th>
+            </tr>
+            <tr>
+                <th><button class="button" onclick='generujTab(malPoAlf("kraj"))'>Malejąco</button></th>
+                <th><button class="button" onclick='generujTab(malPoAlf("kontynent"))'>Malejąco</button></th>
+                <th><button class="button" onclick='generujTab(malPo("powierzchnia"))'>Malejąco</button></th>
+                <th><button class="button" onclick='generujTab(malPo("populacja"))'>Malejąco</button></th>
+                <th><button class="button" onclick='generujTab(Państwo.malGęst)'>Malejąco</button></th>
+            </tr>
+        </thead>
+        <tbody id="tabela">
+            <button class="button" onclick='testuj()'>Testuj</button>
+        </tbody>
+        <p id="test">
+
+        </p>
+    </table>
+    <script src="tabela.js"></script>
+</body>
 </html>
