--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
                 </tr>
             </thead>
             <tbody id="tabela">
+                <button class="button" onclick='testuj()'>Testuj</button>
             </tbody>
-            </table>
+            <p id="test">
+
+            </p>
+        </table>
             <script src="tabela.js"></script>
     </body>
 </html>
