--- a/index.html
+++ b/index.html
@@ -40,5 +40,20 @@
             </p>
         </table>
             <script src="tabela.js"></script>
+            <table id="tabWykonali">
+                <tr>
+                    <th>Wykonali:</th>
+                </tr>
+                <tr>
+                    <th>Dominik Boryło</th>
+                </tr>
+                <tr>
+                    <th>Mateusz Deyk</th>
+                </tr>
+                <tr>
+                    <th>Filip Dryja</th>
+                </tr>
+
+            </table>
     </body>
 </html>
